--- a/clientss/my-app/package.json
+++ b/clientss/my-app/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -26,7 +27,8 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.8"
+    "sweetalert2": "^11.10.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
